# QR-Code-Generator

./: README.md  main.py  pyproject.toml
