[project]
name = "qr-code-generator"
version = "1.0.0"
description = "A modern, cross-platform QR code generator with support for URLs/text and WiFi networks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
    "pyqt6>=6.10.0",
    "qrcode>=8.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
